5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1811_2572.log
== SUBMITION (2019-06-13 09:44:04) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		c[v]=[c[v]+mt[i]]
		v=v+1
print(c)
	
-- EXECUTION TIME:
1.1359
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2572/main.py", line 11, in <module>
    c[v]=[c[v]+mt[i]]
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:44:11) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		c[v]=[c[v]+mt[i]]
		v=v+1
print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:45:25) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2!==0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		c[v]=[c[v]+mt[i]]
		v=v+1
print(c)
	
-- EXECUTION TIME:
0.598065
-- ERROR:
  File "/home/codebench/codes/1811/2572/main.py", line 5
    if(mt[i]%2!==0):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:45:41) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		c[v]=[c[v]+mt[i]]
		v=v+1
print(c)
	
-- EXECUTION TIME:
1.14064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2572/main.py", line 11, in <module>
    c[v]=[c[v]+mt[i]]
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:46:01) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		c[v]=[c[v]+mt[i]]
		v=v+1
print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:46:34) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2==0):
		c[v]=[c[v]+mt[i]]
		v=v+1
print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:47:49) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		c[v]=[c[v]+mt[i]]
		v=v+1
print(c)
	
-- EXECUTION TIME:
1.28503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2572/main.py", line 11, in <module>
    c[v]=[c[v]+mt[i]]
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:48:12) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		c[v]=[c[v]+mt[i]
		v=v+1
print(c)
	
-- EXECUTION TIME:
0.735163
-- ERROR:
  File "/home/codebench/codes/1811/2572/main.py", line 12
    v=v+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:48:27) 
-- CODE:
from numpy import*
mt=array(eval(input("numeros de matriculas: ")))
d=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		d=d+1
c=zeros(d, dtype=int)
v=0
for i in range (size(mt)):
	if(mt[i]%2!=0):
		c[v]=c[v]+mt[i]
		v=v+1
print(c)
	
-- EXECUTION TIME:
0.92923
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
